Fix bug: horizontal rule too close to paragraph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,7 +386,7 @@ body {
 /* Parts Section*/
 
 .parts {
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.8rem;
 }
 
 .parts-container {
@@ -425,7 +425,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2rem;
     width: 7.5rem;
     height: 0.25rem;
     background-color: #ed6a4e;
